--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.devtools.livereload.enabled=true
 #spring.devtools.restart.enabled=true
 spring.jpa.properties.hibernate.default_schema=vehicle
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.mvc.consumes=application/json
 spring.http.encoding.charset=UTF-8
